alignement fixed

--- a/src/logindashboard/Dashboard.css
+++ b/src/logindashboard/Dashboard.css
@@ -1,40 +1,3 @@
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 200px;
-  background-color: #00B088; /* Updated color */
-  color: #fff; /* Added white text color */
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-}
-
-.user-info {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.user-info h2 {
-  font-size: 18px;
-  font-weight: bold;
-  margin-left: 10px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  cursor: pointer;
-}
-
 .main-content {
   height: 100%;
   margin-left: 240px; 
@@ -42,24 +5,16 @@ li {
 }
 
 h1{
-  position: fixed;
-  top: 15px;
-  bottom: 0;
   left: 250px;
   font-size: 40px;
   color: #046851;
-}
-
-#chart-container {
-  height: 100%;
-  width: 100%;
 }
 
 .top-bar {
   width: 100%;
   background-color: #007bff00;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   padding: 10px;
 }
 
@@ -69,17 +24,6 @@ h1{
   right: 20px;
 }
 
-button {
-  position: absolute;
-  left: 1450px;
-  top: 5px;
-  padding: 10px;
-  background-color:  #00B088; /* Updated color */
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  cursor: pointer;
-  color: #fff; /* Added white text color */
-}
 .logout_but {
   position: flex-end;
   margin-right: 8rem;
@@ -106,4 +50,25 @@ button {
 }
 
 
-  
+.DashboardDivider{
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  justify-content: space-around;
+}
+
+.DashboardMain{
+  display: flex;
+  flex-direction: column;
+}
+
+.maincontent{
+  position: absolute;
+  top: 3%;
+  right: 0;
+  margin: 0%;
+  width: 83%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
